# maj2

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEPLOYMENT.md  INSTALL_DEPENDENCIES.bat  INSTRUCTION.md  README.md  SECURITY_AUDIT.md  build.bat  config.ini  install_and_build.ps1  main.cpp
.github/workflows/: build.yml
backend/: .env.example  README.md  package.json  server.js
src/: AdminDetector.cpp  AdminDetector.h  Aimbot.cpp  Aimbot.h  AntiCheatBypass.cpp  AntiCheatBypass.h  AntiCheatDetector.cpp  AntiCheatDetector.h  AuthFlow.cpp  AuthFlow.h  AuthManager.cpp  AuthManager.h  BackendAPI.cpp  BackendAPI.h  ConfigManager.cpp  ConfigManager.h  DLLInjector.cpp  DLLInjector.h  DirectXOverlay.cpp  DirectXOverlay.h  EmbeddedConfig.h  GameCheat.cpp  GameCheat.h  GameMemory.cpp  GameMemory.h  GameOffsets.h  HWIDManager.cpp  HWIDManager.h  JSExecutor.cpp  JSExecutor.h  KeyBindManager.cpp  KeyBindManager.h  Logger.cpp  Logger.h  LogoRenderer.cpp  LogoRenderer.h  MemoryManager.cpp  MemoryManager.h  Misc.cpp  Misc.h  (+14 more)
